--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=SimpleTicker
 version=1.0.0
 author=Stephan Ruloff
 maintainer=Stephan Ruloff <stephan.ruloff@gmail.com>
-sentence=Simple way of handling non-blocking repeating tasks.
+sentence=Allows to call functions with a given interval.
 paragraph=A portable way, handling repeating tasks with the millis()-function.
-category=Other
+category=Timing
 url=http://github.com/rstephan
 architectures=*
