rstephan prefix. URL is now https.

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=SimpleTicker
+name=rstephan SimpleTicker
 version=1.0.0
 author=Stephan Ruloff
 maintainer=Stephan Ruloff <stephan.ruloff@gmail.com>
 sentence=Allows to call functions with a given interval.
 paragraph=A portable way, handling repeating tasks with the millis()-function.
 category=Timing
-url=http://github.com/rstephan
+url=https://github.com/rstephan
 architectures=*
